BUILD SUCCESS - fix HandlerFactory, compilation errors